--- a/stylin.css
+++ b/stylin.css
@@ -30,7 +30,6 @@ h1 {
   padding: 0.5%;
   height: 30.5rem;
   width: 33%
-
 }
 
 :root {
@@ -45,14 +44,14 @@ h1 {
 }
 
 .fire {
-    color: #f5833b;
-    font-family: "Jersey 10 Charted", sans-serif;
-    font-size: 10vh;
-    font-weight: 400;
-    font-style: normal;
-    text-shadow: 1px 1px 2px grey, 0 0 1rem orange;
-  }
-  
+  color: #f5833b;
+  font-family: "Jersey 10 Charted", sans-serif;
+  font-size: 10vh;
+  font-weight: 400;
+  font-style: normal;
+  text-shadow: 1px 1px 2px grey, 0 0 1rem orange;
+}
+
 .madness {
   color: red;
   font-family: "libre barcode 128 Text", system-ui;
@@ -68,7 +67,7 @@ h1 {
   border-radius: 2rem;
 }
 
-.header a{
+.header a {
   background-color: #fff;
   display: flex;
   align-items: center;
@@ -78,7 +77,7 @@ h1 {
 }
 
 .mainBG {
-background-color: #ccc;
+  background-color: #ccc;
 }
 
 #mcolor {
@@ -97,7 +96,7 @@ background-color: #ccc;
   font-family: "teko", system-ui;
 }
 
-.music p{
+.music p {
   color: orange;
 }
 
@@ -105,3 +104,55 @@ background-color: #ccc;
   padding: 10em;
 }
 
+@media only screen and (max-width: 680px) {
+  h1 {
+    display: flex;
+    text-align: center;
+    font-size: 8rem;
+  }
+
+  h2 {
+    display: flex;
+    text-align: center;
+    font-size: 3rem;
+    width: 100%;
+    text-decoration: underline;
+  }
+h3 {
+  display: flex;
+  align-content: center;
+  justify-content: flex-start;
+  width: 18rem;
+}
+  p {
+    font-size: 18px;
+  }
+
+  a {
+    font-size: 17px;
+  }
+
+  .header, a {
+    font-size: 10px;
+  }
+
+  .header {
+    border-radius: 0px;
+  }
+  #pspPic {
+    width: 22.7rem;
+  }
+  
+ .holdEm {
+  padding: 0%;
+}
+  h1 {
+    font-size: 5rem;
+} 
+
+.sideR {
+  padding: auto;
+  height: auto;
+  width: auto;
+}
+}
