--- a/stylin.css
+++ b/stylin.css
@@ -23,7 +23,7 @@ p {
 }
 
 h1 {
-  font-size: 10rem;
+  font-size: 7.5rem;
 }
 
 h2 {
@@ -56,10 +56,19 @@ h2 {
   text-shadow: 1px 1px 2px grey, 0 0 1rem orange;
 }
 
+.theFunny {
+  display: flex;
+  justify-content: center;
+}
+
 .madness {
   color: red;
   font-family: "libre barcode 128 Text", system-ui;
   font-size: 77px;
+}
+
+.resume-heading {
+  
 }
 
 .header {
@@ -72,16 +81,18 @@ h2 {
 }
 
 .header a {
-  background-color: #fff;
+  background-color: #cecece;
   display: flex;
   align-items: center;
   justify-content: space-around;
   height: 2rem;
   width: 7rem;
+  border-radius: 30px;
 }
 
 .mainBG {
   background-color: #ccc;
+  margin: 10%;
 }
 
 #mcolor {
