--- a/stylin.css
+++ b/stylin.css
@@ -62,6 +62,11 @@ h4 {
   font-size: x-small;
 }
 
+.smallish {
+  font-size: 35px;
+  color: aquamarine;
+}
+
 .fire {
   color: #f5833b;
   font-family: "Jersey 10 Charted", sans-serif;
